improvements, fixes, buysell experiment