@@ -10,7 +10,6 @@ import weka.core.Instances;
 import java.util.ArrayList;
 
 import static ru.gustos.trading.global.DecisionManager.calcAllFrom;
-import static ru.gustos.trading.global.DecisionModel.MAIN;
 
 public class DecisionCalc {
     int calcIndex = 0;
@@ -21,11 +20,12 @@ public class DecisionCalc {
     long time;
     RecurrentValues values;
     PLHistory gustosProfit;
-    ArrayList<Integer> goodMoments = new ArrayList<>();
-    ArrayList<Integer> badMoments = new ArrayList<>();
 
     InstrumentData data;
     DecisionManager manager;
+
+    BuyMomentCalculator buy;
+    SellMomentCalculator sell;
 
     boolean onlyCalc;
 
@@ -36,6 +36,11 @@ public class DecisionCalc {
         gustosProfit = new PLHistory(null, null);
 //        volumes = new Volumes(data, false, false);
         values = new RecurrentValues(data);
+    }
+
+    public void setBuySellCalcs(BuyMomentCalculator buy, SellMomentCalculator sell) {
+        this.buy = buy;
+        this.sell = sell;
     }
 
     public MomentDataHelper helper(){
@@ -58,9 +63,9 @@ public class DecisionCalc {
     private void doNext() {
 //        volumes.calc(calcIndex);
         values.feed(calcIndex);
-        calcUsual(calcIndex);
         if (data.buydata!=null)
             calcUsualDetector(calcIndex);
+        calcUsual(calcIndex);
         if (calcIndex >= calcAllFrom && !onlyCalc) {
             calcTargets(calcIndex);
             calcPredictions(calcIndex);
@@ -83,40 +88,38 @@ public class DecisionCalc {
     private void calcUsualDetector(int index) {
         XBar bar = data.bars.get(index);
         MomentData mldata = data.buydata.get(index);
-        buyhelper().put(mldata, "gustosBuy", gbuy ? 1.0 : 0, true);
-        buyhelper().put(mldata, "gustosSell", gsell ? 1.0 : 0, true);
-//        buyhelper().put(mldata, "d2vol", values.deltaToVolumeShort.value() / values.deltaToVolume.value());
-//        buyhelper().put(mldata, "d2voln", values.deltaToVolumeShort.value());
-//        buyhelper().put(mldata, "mm2vol", values.maxminToVolumeShort.value() / values.maxminToVolume.value());
-//        buyhelper().put(mldata, "mm2voln", values.maxminToVolumeShort.value());
-//
-//        buyhelper().put(mldata, "d2mm", values.deltaToMmShort.value() / values.deltaToMm.value());
-//        buyhelper().put(mldata, "d2mmn", values.deltaToMmShort.value());
-//
-//        buyhelper().put(mldata, "mm", values.maxminShort.value() / values.maxmin.value());
-//        buyhelper().put(mldata, "change0", values.change0.value());
-//        buyhelper().put(mldata, "change1", values.change1.value());
+        buyhelper().put(mldata, "d2vol", values.deltaToVolumeShort.value() / values.deltaToVolume.value());
+        buyhelper().put(mldata, "d2voln", values.deltaToVolumeShort.value());
+        buyhelper().put(mldata, "mm2vol", values.maxminToVolumeShort.value() / values.maxminToVolume.value());
+        buyhelper().put(mldata, "mm2voln", values.maxminToVolumeShort.value());
 
-//        buyhelper().put(mldata, "upCandles1", SheetUtils.upCandles(data, index, 1));
-//        buyhelper().put(mldata, "upCandles2", SheetUtils.upCandles(data, index, 5));
-//        buyhelper().put(mldata, "downCandles1", SheetUtils.downCandles(data, index, 1));
-//        buyhelper().put(mldata, "downCandles2", SheetUtils.downCandles(data, index, 5));
+        buyhelper().put(mldata, "d2mm", values.deltaToMmShort.value() / values.deltaToMm.value());
+        buyhelper().put(mldata, "d2mmn", values.deltaToMmShort.value());
+
+        buyhelper().put(mldata, "mm", values.maxminShort.value() / values.maxmin.value());
+        buyhelper().put(mldata, "change0", values.change0.value());
+        buyhelper().put(mldata, "change1", values.change1.value());
+
+        buyhelper().put(mldata, "upCandles1", SheetUtils.upCandles(data, index, 1));
+        buyhelper().put(mldata, "upCandles2", SheetUtils.upCandles(data, index, 5));
+        buyhelper().put(mldata, "downCandles1", SheetUtils.downCandles(data, index, 1));
+        buyhelper().put(mldata, "downCandles2", SheetUtils.downCandles(data, index, 5));
 //
-//        buyhelper().put(mldata, "toAvgSd", div(price - values.gustosAvg.value(), values.gustosAvg.sd()));
-//        buyhelper().put(mldata, "toAvgSdMax", div(maxprice - values.gustosAvg.value(), values.gustosAvg.sd()));
-//        buyhelper().put(mldata, "toAvgSdMin", div(minprice - values.gustosAvg.value(), values.gustosAvg.sd()));
-//        buyhelper().put(mldata, "sd", values.gustosAvg.sd() / price * 10);
-//        buyhelper().put(mldata, "toAvgSdMaxP", div(maxprice - values.gustosAvg.pvalue(), values.gustosAvg.psd()));
-//        buyhelper().put(mldata, "toAvgSdMinP", div(minprice - values.gustosAvg.pvalue(), values.gustosAvg.psd()));
-//
+        buyhelper().put(mldata, "toAvgSd", div(price - values.gustosAvg.value(), values.gustosAvg.sd()));
+        buyhelper().put(mldata, "toAvgSdMax", div(maxprice - values.gustosAvg.value(), values.gustosAvg.sd()));
+        buyhelper().put(mldata, "toAvgSdMin", div(minprice - values.gustosAvg.value(), values.gustosAvg.sd()));
+        buyhelper().put(mldata, "sd", values.gustosAvg.sd() / price * 10);
+        buyhelper().put(mldata, "toAvgSdMaxP", div(maxprice - values.gustosAvg.pvalue(), values.gustosAvg.psd()));
+        buyhelper().put(mldata, "toAvgSdMinP", div(minprice - values.gustosAvg.pvalue(), values.gustosAvg.psd()));
+
         buyhelper().put(mldata, "toAvgSd2", div(price - values.gustosAvg2.value(), values.gustosAvg2.sd()));
         buyhelper().put(mldata, "toAvgSdMax2", div(maxprice - values.gustosAvg2.value(), values.gustosAvg2.sd()));
         buyhelper().put(mldata, "toAvgSdMin2", div(minprice - values.gustosAvg2.value(), values.gustosAvg2.sd()));
         buyhelper().put(mldata, "sd2", values.gustosAvg2.sd() / price * 10);
         buyhelper().put(mldata, "toAvgSdMaxP2", div(maxprice - values.gustosAvg2.pvalue(), values.gustosAvg2.psd()));
         buyhelper().put(mldata, "toAvgSdMinP2", div(minprice - values.gustosAvg2.pvalue(), values.gustosAvg2.psd()));
-//        buyhelper().put(mldata, "toAvgSdMaxPP2", div(maxprice - values.gustosAvg2.pvalue2(), values.gustosAvg2.psd2()));
-//        buyhelper().put(mldata, "toAvgSdMinPP2", div(minprice - values.gustosAvg2.pvalue2(), values.gustosAvg2.psd2()));
+        buyhelper().put(mldata, "toAvgSdMaxPP2", div(maxprice - values.gustosAvg2.pvalue2(), values.gustosAvg2.psd2()));
+        buyhelper().put(mldata, "toAvgSdMinPP2", div(minprice - values.gustosAvg2.pvalue2(), values.gustosAvg2.psd2()));
 //
 //        buyhelper().put(mldata, "toAvgSd3", div(price - values.gustosAvg3.value(), values.gustosAvg3.sd()));
 //        buyhelper().put(mldata, "toAvgSdMax3", div(maxprice - values.gustosAvg3.value(), values.gustosAvg3.sd()));
@@ -130,17 +133,31 @@ public class DecisionCalc {
         buyhelper().put(mldata, "stoh0", values.stoh0.percent());
         buyhelper().put(mldata, "stoh1", values.stoh1.percent());
         buyhelper().put(mldata, "stoh2", values.stoh2.percent());
-//        buyhelper().put(mldata, "rsi0", values.rsi0.value());
-//        buyhelper().put(mldata, "rsi1", values.rsi1.value());
-//        buyhelper().put(mldata, "rsi2", values.rsi2.value());
+        buyhelper().put(mldata, "rsi0", values.rsi0.value());
+        buyhelper().put(mldata, "rsi1", values.rsi1.value());
+        buyhelper().put(mldata, "rsi2", values.rsi2.value());
+
+        helper().put(mldata, "vdema0", values.vdema0.value());
+        helper().put(mldata, "vdema1", values.vdema1.value());
+        helper().put(mldata, "vdema2", values.vdema2.value());
+        helper().put(mldata, "vdema3", values.vdema3.value());
+        helper().put(mldata, "vdema4", values.vdema4.value());
+
+        helper().put(mldata, "change0", values.change0.value());
+        helper().put(mldata, "change1", values.change1.value());
+        helper().put(mldata, "change2", values.change2.value());
+        helper().put(mldata, "change3", values.change3.value());
+        helper().put(mldata, "change4", values.change4.value());
 
         buyhelper().put(mldata, "volumeBurst", values.volumeShort.value() / values.volumeLong.value());
         buyhelper().put(mldata, "volumeBurst2", values.volumeShort2.value() / values.volumeLong2.value());
 //        buyhelper().put(mldata, "volume", m.bar.getVolume());
 //        buyhelper().put(mldata, "price", m.bar.getClosePrice());
 
-        for (int i = 1; i < Math.min(index, 5); i++)
-            buyhelper().putLagged(mldata, data.buydata.get(index - i), i);
+        int[] lags = new int[]{1,2,3,6,10,20};
+        for (int i = 0; i < lags.length ; i++)
+            if (lags[i]<index)
+                buyhelper().putLagged(mldata, data.buydata.get(index - lags[i]), lags[i]);
     }
 
     private void calcUsual(int index) {
@@ -153,13 +170,20 @@ public class DecisionCalc {
         minprice = bar.getMinPrice();
         time = bar.getEndTime().toEpochSecond();
 
-        gbuy = CalcUtils.gustosBuy(data, index, values.gustosAvg, values.gustosParams);
-        gsell = CalcUtils.gustosSell(data, index, values.gustosAvg4, values.gustosParams);
+        gbuy = buy.shouldBuy();
+        gsell = sell.shouldSell();
+        data.buys.set(calcIndex,gbuy);
+        data.sells.set(calcIndex,gsell);
+        if (gsell || price>values.gustosAvg.value())
+            mldata.ignore = true;
+
+//        gbuy = CalcUtils.gustosBuy(data, index, values.gustosAvg, values.gustosParams);
+//        gsell = CalcUtils.gustosSell(data, index, values.gustosAvg4, values.gustosParams);
 //        gbuy = CalcUtils.gustosBuy(data, index, values.gustosAvgBuy, values.gustosParams);
 //        gsell = CalcUtils.gustosSell(data, index, values.gustosAvgSell, values.gustosParams);
 
-        helper().put(mldata, "gustosBuy", gbuy ? 1.0 : 0, true);
-        helper().put(mldata, "gustosSell", gsell ? 1.0 : 0, true);
+//        helper().put(mldata, "gustosBuy", gbuy ? 1.0 : 0, true);
+//        helper().put(mldata, "gustosSell", gsell ? 1.0 : 0, true);
 
 
         helper().put(mldata, "toAvgSd", div(price - values.gustosAvg.value(), values.gustosAvg.sd()));
@@ -396,22 +420,36 @@ public class DecisionCalc {
 
     }
 
-    public void prepareGoodSell() {
+    public void prepareGustosProfit(){
+        gustosProfit = new PLHistory(null,null);
+        for (int i= 0;i<calcIndex;i++){
+            XBar bar = data.bar(i);
+            if (data.sells.get(i))
+                gustosProfit.sellMoment(bar.getClosePrice(), bar.getEndTime().toEpochSecond());
+            else if (data.buys.get(i))
+                gustosProfit.buyMoment(bar.getClosePrice(), bar.getEndTime().toEpochSecond());
+
+        }
+    }
+
+    public void prepareGoodSell(boolean withWeights) {
         int buyIndex = -1;
         double buyCost = 0;
         long buyTime = Long.MAX_VALUE;
         for (int i = targetCalcedTo;i>=0;i--){
             MomentData mldata = data.data.get(i);
             double cost = data.bar(i).getClosePrice();
-            if (helper().get(mldata,"gustosBuy")>0){
+            if (data.buys.get(i)){
                 buyIndex = i;
                 buyCost = cost;
                 buyTime = data.bar(i).getEndTime().toEpochSecond();
             }
             if (buyIndex<0) continue;
             helper().put(mldata,"_goodSell",cost>buyCost?1:0,true);
-            mldata.weight = (cost>buyCost ? cost/buyCost - 1 : buyCost/cost - 1) * 100;
-            mldata.whenWillKnow = buyTime;
+            if (withWeights) {
+                mldata.weight = (cost > buyCost ? cost / buyCost - 1 : buyCost / cost - 1) * 100;
+                mldata.whenWillKnow = buyTime;
+            }
         }
     }
 
@@ -422,7 +460,7 @@ public class DecisionCalc {
         for (int i = targetCalcedTo;i>=0;i--){
             MomentData mldata = data.data.get(i);
             double cost = data.bar(i).getClosePrice();
-            if (helper().get(mldata,"gustosSell")>0){
+            if (data.sells.get(i)){
                 sellIndex = i;
                 sellCost = cost;
                 sellTime = data.bar(i).getEndTime().toEpochSecond();
@@ -439,32 +477,40 @@ public class DecisionCalc {
         if (gsell) {
             for (int i = targetCalcedTo; i < index; i++) {
                 MomentData mldata = data.data.get(i);
-                MomentData mldatabuy = data.buydata.get(i);
+                MomentData mldatabuy = null;
+                if (data.buydata!=null)
+                    mldatabuy = data.buydata.get(i);
                 GustosLogicStrategy strategy;
                 Pair<Double, Integer> p;
                 int willKnow = 0;
                 strategy = new GustosLogicStrategy();
                 p = strategy.calcProfit(data, i);
                 willKnow = Math.max(willKnow, p.getSecond());
-                helper().put(mldata, "_goodBuy", p.getFirst() > 1 ? 1.0 : 0, true);
-                buyhelper().put(mldatabuy, "_goodBuy", p.getFirst() > 1 ? 1.0 : 0, true);
-                mldatabuy.weight = mldata.weight = (p.getFirst() > 1 ? p.getFirst() - 1 : 1 / p.getFirst() - 1) * 100;
+                double goodBuy = p.getFirst() > 1 ? 1.0 : 0;
+                helper().put(mldata, "_goodBuy", goodBuy, true);
+                mldata.weight = (p.getFirst() > 1 ? p.getFirst() - 1 : 1 / p.getFirst() - 1) * 100;
 
-                manager.models.correctModelForMoment(mldata);
+                manager.models.model.correctModelForMoment(i);
 
 
                 int nextSell = strategy.nextSell(data, i);
                 double nextPrice = nextSell >= data.size() ? price : data.bar(nextSell).getClosePrice();
                 double curPrice = data.bar(i).getClosePrice();
-                helper().put(mldata, "_goodSell", curPrice > nextPrice ? 1.0 : 0, true);
-                buyhelper().put(mldatabuy, "_goodSell", curPrice > nextPrice ? 1.0 : 0, true);
+                double goodSell = curPrice > nextPrice ? 1.0 : 0;
+                helper().put(mldata, "_goodSell", goodSell, true);
                 willKnow = Math.max(willKnow, nextSell);
                 if (willKnow == Integer.MAX_VALUE) {
                     targetCalcedTo = i;
                     return;
                 }
 
-                mldatabuy.whenWillKnow = mldata.whenWillKnow = data.bar(willKnow).getEndTime().toEpochSecond();
+                mldata.whenWillKnow = data.bar(willKnow).getEndTime().toEpochSecond();
+                if (mldatabuy!=null) {
+                    buyhelper().put(mldatabuy, "_goodBuy", goodBuy, true);
+                    buyhelper().put(mldatabuy, "_goodSell", goodSell, true);
+                    mldatabuy.weight = mldata.weight;
+                    mldatabuy.whenWillKnow = mldata.whenWillKnow;
+                }
             }
 
             targetCalcedTo = index;
@@ -474,24 +520,15 @@ public class DecisionCalc {
     }
 
     private void calcPredictionsDetector(int index) {
-        if (manager.hasModel()) {
-
-            MomentData mldata = data.buydata.get(index);
-            for (int i = 0; i < manager.models.model.models2.get(MAIN).size(); i++)
-                helper().putResult(mldata, i, MAIN, manager.models.model.full && buyhelper().classify(mldata, manager.ignore(i == 0), manager.models.model.models2.get(MAIN).get(i), i, 9));
-
-        }
 
     }
 
     public void calcPredictions(int index) {
         if (manager.hasModel()) {
             MomentData mldata = data.data.get(index);
-            boolean[] results = new boolean[2];
-            for (int i = 0; i < manager.models.model.models.get(MAIN).size(); i++) {
-                int c = 0;
-                helper().putResult(mldata, i, MAIN, results[i] = manager.models.model.full && helper().classify(mldata, manager.ignore(i == 0), manager.models.model.models.get(MAIN).get(i), i, 9));
-            }
+            boolean result ;
+            FilterMomentsModel model = manager.models.model;
+            helper().putResult(mldata, 0, "main", result = model.full && helper().classify(mldata, manager.ignore(true), model.attFilter, model.classifier, 0, 9));
 
 
             boolean classifiedBuy = helper().get(mldata, "@goodBuy|main") > 0.5;
@@ -503,27 +540,27 @@ public class DecisionCalc {
 //            boolean gsell = buyhelper().classify(mldata2,manager.ignore(false), manager.models.model.models2.get(MAIN).get(1),1,9);
 
 
-            if (gbuy && manager.futuredata != null) {
-                Object classifier = manager.models.model.models.get(MAIN).get(0);
-                if (classifier instanceof RandomForestWithExam) {
-                    RandomForestWithExam r = (RandomForestWithExam) classifier;
-                    Instance inst = helper().makeInstance(mldata, manager.ignoreBuy, 0, 9);
-                    Instances set = helper().makeEmptySet(manager.ignoreBuy, 0, 9);
-                    inst.setDataset(set);
-                    Pair<Double, Integer> pp = new GustosLogicStrategy().calcProfit(manager.futuredata, index);
-                    if (pp.getSecond() < manager.futuredata.size()) {
-                        inst.setValue(inst.classIndex(), pp.getFirst() > 1 ? 1 : 0);
-                        try {
-                            r.computeCombPizdunstvo(inst);
-//                            double[][] p = r.computePizdunstvo(inst);
-//                            double[][] p2 = r.computePizdunstvo2(inst);
-//                            PizdunstvoData.pdbuy.add(set, data.instrument.toString(), (int) (time / (60 * 60 * 24 * 14)), p, p2);
-                        } catch (Exception e) {
-                            e.printStackTrace();
-                        }
-                    }
-                }
-            }
+//            if (gbuy && manager.futuredata != null) {
+//                Object classifier = manager.models.model.models.get(0);
+//                if (classifier instanceof RandomForestWithExam) {
+//                    RandomForestWithExam r = (RandomForestWithExam) classifier;
+//                    Instance inst = helper().makeInstance(mldata, manager.ignoreBuy, 0, 9);
+//                    Instances set = helper().makeEmptySet(manager.ignoreBuy, 0, 9);
+//                    inst.setDataset(set);
+//                    Pair<Double, Integer> pp = new GustosLogicStrategy().calcProfit(manager.futuredata, index);
+//                    if (pp.getSecond() < manager.futuredata.size()) {
+//                        inst.setValue(inst.classIndex(), pp.getFirst() > 1 ? 1 : 0);
+//                        try {
+//                            r.computeCombPizdunstvo(inst);
+////                            double[][] p = r.computePizdunstvo(inst);
+////                            double[][] p2 = r.computePizdunstvo2(inst);
+////                            PizdunstvoData.pdbuy.add(set, data.instrument.toString(), (int) (time / (60 * 60 * 24 * 14)), p, p2);
+//                        } catch (Exception e) {
+//                            e.printStackTrace();
+//                        }
+//                    }
+//                }
+//            }
 
 //            if (gsell && futuredata != null) {
 //                Object classifier = model.models.get(MAIN).get(1);
